--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "config": "^3.3.6",
     "debug": "^4.3.2",
     "express": "^4.17.1",
+    "fawn": "^2.1.5",
     "helmet": "^4.6.0",
     "joi": "^17.4.2",
+    "joi-objectid": "^4.0.2",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
