--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --forceExit --maxWorkers=1"
+    "test": "jest --verbose --forceExit --maxWorkers=1 --coverage",
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "12.18.3"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "config": "^3.3.6",
     "debug": "^4.3.2",
     "express": "^4.17.1",
@@ -21,6 +26,7 @@
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
