--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: Run tests
+name: vidly
 
 on: [push]
 
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
-        mongodb-version: ['4.0']
+        node-version: '12.x'
+        mongodb-version: '4.0'
 
     steps:
     - name: Git checkout
